- Added memory_limit and error_logging config to wordpress
- Updated SSH container so that user can sudo
- Upgraded Wordpress from 5.7.1 to 5.7.2

v1.4.5
======
- Added WORDPRESS_CONFIG_EXTRA environment variable for extra wp-config config
- Change body limit to 100mb in nginx, php and modsecurity

v1.4.6
======
- Various SSH image developments
- Upgraded Drupal 9 to 9.2.0
- CVE-2021-33560 found in NGINX by Trivy
- Added permissions scripts to SSH image
- Reference full qualified path to entrypoint in wordpress

v1.4.7
======
- Added nano to SSH image
- Fixed SFTP access to SSH image
- Updated Drupal from 7.80 to 7.82
- Updated Drupal from 9.20 to 9.2.2
- Updated Drupal 8 to 8.9.17

v1.5.0
======
- Added composer to SSH image
- Added php xml extension to SSH image
- Variablized webroot in nginx-modsec so that it can be customized
- Set error.html permissions explicitly in nginx-modsec image
- Drupal9 now proper composer install
- Bootstrap SSH to existing image to bring across all tooling
- Added hook for bootstrapping of SSH to images
- Major repository layout reorganization
- Wordpress 5.7.2 to 5.8.0
- Druapal 9.2.2 to 9.2.4
- Drupal 8.9.17 to 8.9.18

v1.5.1
======
- Added basic auth to NGINX proxy default.conf
=======

v1.5.2
======
- Added Redis PHP extension to Drupal 9 image
- Update to specific Drupal core version using composer in Drupal 9
- Drupal 9.2.4 to 9.2.6 - security update

v1.5.3
======
WP 5.8.0 to 5.8.1

v1.5.4
======
- Added basic auth directive to php location block
- Only present NGINX custom errors for 5xx codes

v1.6.0
======
- Added vim to ssh image/s
- Drupal9 image cleanup
- Updated composer md5 in drupal8/9
- Added patch to Drupal9 image
- Updated Drupal9 from 9.2.6 to 9.2.7
- Updated vuln scan script so that it only scans for unfixed vulns
- Changed NGINX fastcgi pass so full address can be specified (tcp or unix)
- Removed superfluous environment variables from Drupal 9 image

v1.6.1 (latest)
======